--- a/index.html
+++ b/index.html
@@ -132,13 +132,6 @@
     </div>
 
     <script type="text/javascript" src="dist/main.js"></script>
-    <script type="text/javascript" src="./src/skycons.js"></script>
-    <!-- <script src="js/main.js"></script>
-    <script src="js/setting.js"></script>
-    <script src="js/todo.js"></script>
-    <script type="text/javascript" src="js/skycons.js"></script>
-    <script type="text/javascript" src="js/weather.js"></script>
-    <script type="text/javascript" src="js/widhed-app/exchange-rates.js"></script>
-    <script type="text/javascript" src="js/widhed-app/pass-generator.js"></script> -->
+    <script type="text/javascript" src="./src/utils/skycons.js"></script>
 </body>
 </html>
