--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h4>Password Generator</h4>
         <form>
             <div class="form-group">
-                <label for="param-1">String Length(<span id="password-length">10</span></label>
+                <label for="param-1">String Length(<span id="password-length">10</span>)</label>
                 <input type="range" class="form-control" id="param-1" value="10" max="50">
             </div>
             <div class="checkbox">
